k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-simple-app
  namespace: production
  labels:
    app.kubernetes.io/name: k8s-simple-app
    app.kubernetes.io/version: v0.0.1
    app.kubernetes.io/environment: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: k8s-simple-app
      app.kubernetes.io/version: v0.0.1
      app.kubernetes.io/environment: production
  template:
    metadata:
      labels:
        app.kubernetes.io/name: k8s-simple-app
        app.kubernetes.io/version: v0.0.1
        app.kubernetes.io/environment: production
    spec:
      containers:
      - image: lbogdan/k8s-simple-app-2:v0.0.8
        name: k8s-simple-app
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 100m
        ports:
        - containerPort: 8080
          name: http
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          failureThreshold: 3 # default
          periodSeconds: 5
          successThreshold: 1 # default
          timeoutSeconds: 1 # default
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          failureThreshold: 3 # default
          periodSeconds: 5
          successThreshold: 1 # default
          timeoutSeconds: 1 # default
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        configMap:
          name: k8s-simple-app
      securityContext:
        runAsUser: 1000 # node
        runAsGroup: 1000 # node
